GuiStack/wwwroot/css/windows.css
/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 * 
 * Copyright © Vincent Bengtsson & Contributors 2022
 * https://github.com/Visual-Vincent/GuiStack
 */

 .cssWindow
{
    color: #000000;
    background: #FFFFFF;
    position: fixed;
    display: none;
    top: 50%;
    left: 50%;
    padding: 12px;
    max-width: 100%;
    max-height: 100%;
    border-radius: 8px;
    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
    -ms-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translate(-50%, -50%) translate(0.5px, 0.5px);
    -moz-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%) translate(0.5px, 0.5px);
    z-index: 1000;
}

.cssWindow.dark
{
    color: #FFFFFF;
    background: #000000;
    border: 1px solid #FFFFFF;
}

.cssWindowBackground
{
    background: rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 999;
}

.cssWindowBackground.backdropblur
{
    -webkit-backdrop-filter: blur(7.5px);
    backdrop-filter: blur(7.5px);
}

